# hmonitors

./: .gitignore  README.md  hmonitors.cabal  package.yaml
app/: Main.hs
src/Monitors/: Battery.hs  Common.hs  Date.hs  Net.hs  Volume.hs
